# cp

./: .gitignore  README.md  cp.ddl  pyproject.toml  requirements.txt  rxconfig.py
cp/: .env.example  __init__.py  auth.py  backend.py  bg.py  cp.py  db.py  dep.py  main.py  models.py  runner.py  state.py  template.py  util.py
cp/api/: __init__.py  alerts.py  cluster_recovery.py  clusters.py  compute_unit.py  events.py  jobs.py
cp/auth/: __init__.py  common.py  dependencies.py  oidc.py  router.py
cp/backend/: create_cluster.py  db.py  delete_cluster.py  healthcheck_cluster.py  main.py  restore_cluster.py  scale_cluster.py  upgrade_cluster.py  util.py
cp/components/: BadgeClusterStatus.py  BadgeEventType.py  BadgeJobStatus.py  footer.py  main.py  multiselect.py  navbar.py  notify.py  sidebar.py
cp/infra/: __init__.py  db.py  dependencies.py  errors.py  logging.py  util.py
cp/pages/: cluster.py  cluster_backups.py  cluster_jobs.py  cluster_overview.py  cluster_users.py  clusters.py  events.py  index.py  job.py  job_overview.py  jobs.py  login.py  settings.py  util.py
cp/reflexwebapp/: __init__.py
cp/repos/: __init__.py  alerts.py  auth.py  backup_catalog.py  base.py  cluster.py  cluster_jobs.py  common.py  event.py  jobs.py  mq.py  (+1 more)
playbooks/: CREATE_CLUSTER.yaml  DELETE_CLUSTER.yaml  HEALTHCHECK_CLUSTER.yaml  SCALE_CLUSTER.yaml  SCALE_CLUSTER_IN.yaml  SCALE_CLUSTER_OUT.yaml  SCALE_DISK_SIZE.yaml  SCALE_NODE_CPUS.yaml  UPGRADE_CLUSTER.yaml
resources/: cp.ddl  ddl.sql  init.sql  post_schema.sql
webapp/: README.md  index.html  script.js  style.css  util.js
(+193 files in other folders)
