[tool.poetry]
name = "cp"
version = "0.1.0"
description = ""
authors = ["Fabio Ghirardello"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
reflex = "^0.7.5"
psycopg = {extras = ["pool"], version = "^3.2.6"}
psycopg-binary = "^3.2.6"
dotenv = "^0.9.9"
sqlparse = "^0.5.3"
ansible-runner = "^2.4.1"
requests = "^2.32.3"
cloud-instance = "^0.1.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
