[project]
name = "cp"
version = "0.1.0"
description = "cp"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psycopg (>=3.3.3,<4.0.0)",
    "psycopg-binary (>=3.3.3,<4.0.0)",
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "ansible-runner (>=2.4.3,<3.0.0)",
    "psycopg-pool (>=3.3.0,<4.0.0)",
    "systemd-python (>=235,<236) ; sys_platform == \"linux\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
